--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ body {
     background-color: #fafafa;
 }
 
-header {
+.header-top {
     height: 60px;
 }
 
@@ -20,6 +20,7 @@ header {
 
 .header-navbar .container {
     max-width: 975px;
+    padding: 0 15px;
 }
 
 .search {
@@ -101,7 +102,7 @@ header {
 }
 
 .contents {
-    max-width: 821px;
+    max-width: 860px;
     margin-top: 16px;
     padding: 0 26px;
 }
@@ -295,6 +296,10 @@ header {
     font-size: 14px;
 }
 
+.sidebar {
+    padding-left: 2.2rem !important;
+}
+
 .sidebar .sidebar-profile img {
     width: 56px;
     height: 56px;
@@ -320,12 +325,119 @@ header {
 }
 
 .sidebar .sidebar-profile span {
-    color: #8e8e8e;;
+    color: #8e8e8e;
     font-weight: 600;
     font-size: 14px;
     display: block;
     align-self: center;
     line-height: 1.3;
+}
+
+footer {
+    border-top: 1px solid #d8d8d8;;
+    padding: 25px;
+    margin-top: 40px;
+    text-align: center;
+}
+
+footer a {
+    color: #0095f6;
+    font-weight: 600;
+    text-decoration: none;
+}
+
+.suggestion-title span {
+    color: #8e8e8e;
+    font-weight: 600;
+    font-size: 14px;
+}
+
+.suggestion-title a {
+    display: inline;
+    color: #262626;
+    font-weight: 600;
+    text-decoration: none;
+    font-size: 12px;
+    align-self: center;
+    margin-top: -4px;
+}
+
+.suggestion-user img {
+    width: 32px;
+    height: 32px;
+    border-radius: 50%;
+    padding: 0;
+    align-self: center;
+}
+
+.suggestion-user .follow-account {
+    color: #0095f6;
+    font-weight: 600;
+    text-decoration: none;
+    font-size: 12px;
+    align-self: center;
+    margin-top: -4px;
+}
+
+.suggestion-user .profile-link {
+    color: #262626;
+    font-weight: 600;
+    text-decoration: none;
+    font-size: 14px;
+    display: block;
+}
+
+.suggestion-user span {
+    color: #8e8e8e;
+    font-weight: 500;
+    font-size: 12px;
+    display: block;
+    align-self: center;
+    line-height: 1.3;
+}
+
+.footer-links a {
+    color: #c7c7c7;
+    margin: 0;
+    text-decoration: none;
+    font-size: 12px;
+    font-weight: 400;
+}
+
+.footer-links a::after {
+    content: '\00B7';
+    margin: 0 0.25em 0 0.25em;
+}
+
+.footer-links li:last-child a:after {
+    content: '';
+}
+
+.footer-links ul {
+    margin: 0;
+    padding: 0;
+}
+
+.footer-links ul li {
+    display: inline;
+}
+
+.sidebar-footer {
+    color: #c7c7c7;
+    font-size: 12px;
+    font-weight: 400;
+}
+
+.story-items::-webkit-scrollbar
+{
+    height: 4px;
+    border-radius: 100px;
+}
+
+.story-items::-webkit-scrollbar-thumb:hover
+{
+	background-color: #b8b8b8;
+    border-radius: 100px;
 }
 
 @media screen and (max-width: 700px) {
@@ -334,6 +446,33 @@ header {
     }
 
     .story-items::-webkit-scrollbar {
+        display: none;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .sidebar {
+        display: none;
+    }
+}
+
+@media screen and (max-width: 415px) {
+    .menu-items .menu-item:first-child {
+        display: none;
+    }
+    .menu-items .menu-item:nth-last-child(2) {
+        display: none;
+    }
+}
+
+@media screen and (max-width: 340px) {
+    .menu-items .menu-item:nth-last-child(3) {
+        display: none;
+    }
+}
+
+@media screen and (max-width: 292px) {
+    .menu-items .menu-item:nth-last-child(4) {
         display: none;
     }
 }
